crates/pixi_build_type_conversions/src/snapshots/pixi_build_type_conversions__project_model__tests__conversions_v1_docs@advanced_cpp.snap
---
source: crates/pixi_build_type_conversions/src/project_model.rs
assertion_line: 327
expression: project_model
---
{
  "name": "cpp_math",
  "buildStringPrefix": null,
  "buildNumber": null,
  "version": "0.1.0",
  "description": null,
  "authors": null,
  "license": null,
  "licenseFile": null,
  "readme": null,
  "homepage": null,
  "repository": null,
  "documentation": null,
  "targets": {
    "defaultTarget": {
      "hostDependencies": {},
      "buildDependencies": {},
      "runDependencies": {},
      "runConstraints": {}
    }
  }
}
