crates/pixi_build_type_conversions/src/snapshots/pixi_build_type_conversions__project_model__tests__conversions_v1_docs@advanced_python.snap
---
source: crates/pixi_build_type_conversions/src/project_model.rs
expression: project_model
---
{
  "version": "1",
  "data": {
    "name": "rich_example",
    "version": "0.1.0",
    "description": null,
    "authors": null,
    "license": null,
    "licenseFile": null,
    "readme": null,
    "homepage": null,
    "repository": null,
    "documentation": null,
    "targets": {
      "defaultTarget": {
        "hostDependencies": {},
        "buildDependencies": {},
        "runDependencies": {}
      },
      "targets": {}
    }
  }
}
