crates/pixi_build_type_conversions/src/snapshots/pixi_build_type_conversions__project_model__tests__conversions_v1_docs@pixi_build_cpp.snap
---
source: crates/pixi_build_type_conversions/src/project_model.rs
expression: project_model
---
{
  "version": "1",
  "name": "python_bindings",
  "version": "0.1.0",
  "description": null,
  "authors": null,
  "license": null,
  "licenseFile": null,
  "readme": null,
  "homepage": null,
  "repository": null,
  "documentation": null,
  "configuration": null,
  "targets": {
    "defaultTarget": {
      "hostDependencies": {
        "cmake": {
          "binary": {
            "version": "3.20.*",
            "build": null,
            "buildNumber": null,
            "fileName": null,
            "channel": null,
            "subdir": null,
            "md5": null,
            "sha256": null
          }
        },
        "nanobind": {
          "binary": {
            "version": "2.4.*",
            "build": null,
            "buildNumber": null,
            "fileName": null,
            "channel": null,
            "subdir": null,
            "md5": null,
            "sha256": null
          }
        },
        "python": {
          "binary": {
            "version": "3.12.*",
            "build": null,
            "buildNumber": null,
            "fileName": null,
            "channel": null,
            "subdir": null,
            "md5": null,
            "sha256": null
          }
        }
      },
      "buildDependencies": {},
      "runDependencies": {}
    },
    "targets": {}
  }
}
